--- a/ShopOrderApp/Views/Home/_LoadTruck.cshtml
+++ b/ShopOrderApp/Views/Home/_LoadTruck.cshtml
@@ -13,12 +13,12 @@
                         @using (Html.BeginForm("SubmitTruckLoad", "Home", FormMethod.Post, new { @class = "truckLoadSubmit" }))
                         {
                             <input type="hidden" id="palletDispatchId" />
-                            <div class="form-group">
+                            @*<div class="form-group">
                                 <label class="form-label">Select Vehicle :</label>
                                 <select class="form-select vechile-map">
                                 </select>
 
-                            </div>
+                            </div>*@
                             <div class="form-group">
                                 <label class="form-label">Scan Pallet Number:</label>
                                 <input type="text" id="scan" class="form-control" placeholder="Scan Pallet" onkeydown="ScanPalletData(event);">
