--- a/WMS/Views/Invoice/_InvoiceGridviewPartial.cshtml
+++ b/WMS/Views/Invoice/_InvoiceGridviewPartial.cshtml
@@ -121,6 +121,7 @@
 
 
         });
+        settings.ClientSideEvents.FocusedRowChanged = "OnGridFocusedRowChanged";
         settings.SettingsDetail.ShowDetailRow = true;
         settings.SetDetailRowTemplateContent(c =>
         {
