--- a/ShopOrderApp/Views/Home/_DeliveriesResult.cshtml
+++ b/ShopOrderApp/Views/Home/_DeliveriesResult.cshtml
@@ -11,14 +11,6 @@
         <div class="card">
             <div class="card-header">
                 <h4 class="card-title">@item.OrderProcess.Order.OrderNumber</h4>
-                <ul class="box-controls pull-right d-md-flex">
-                    <li class="dropdown">
-
-                        <button class="btn btn-danger px-10" href="#" aria-expanded="true" onclick="AssignOrderToTruck(@item.PalletsDispatchID)">@(item.DispatchStatus == PalletDispatchStatusEnum.Created ? "Load On Truck" : "Un Load Truck")</button>
-
-
-                    </li>
-                </ul>
 
             </div>
 
@@ -55,12 +47,11 @@
                 </div>
             </div>
 
-            @*<div class="card-footer">
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Add comment...">
-                        <button class="btn bg-info btn-sm" type="button"><i class="fa fa-send-o"></i></button>
-                    </div>
-                </div>*@
+            <div class="card-footer">
+                <div class="input-group">
+                    <button class="pull-right btn bg-info btn-sm" type="button" onclick="AssignOrderToTruck(@item.PalletsDispatchID)">@(item.DispatchStatus == PalletDispatchStatusEnum.Created ? "Load On Truck" : "Un Load Truck")</button>
+                </div>
+            </div>
         </div>
 
 
@@ -73,23 +64,24 @@
 }
 
 
-<div class="pull-right" style="overflow:auto;">
-    @Html.PagedListPager(Model, page => Url.Action("_DeliveriesResult", new
+@*<div class="pull-right" style="overflow:auto;">
+        @Html.PagedListPager(Model, page => Url.Action("_DeliveriesResult", new
+        {
+            page = page,
+            pagesize = ViewBag.pageSize,
+            searchText = ViewBag.searchText,
+            palletDispatchStatus = ViewBag.status,
+    }),
+     PagedListRenderOptions.EnableUnobtrusiveAjaxReplacing(new AjaxOptions()
     {
-        page = page,
-        pagesize = ViewBag.pageSize,
-        searchText = ViewBag.searchText,
-        palletDispatchStatus = ViewBag.status,
-}),
- PagedListRenderOptions.EnableUnobtrusiveAjaxReplacing(new AjaxOptions()
-{
-    HttpMethod = "POST",
-         UpdateTargetId = "deliveries-list",
+        HttpMethod = "POST",
+             UpdateTargetId = "deliveries-list",
 
- }))
+     }))*@
 
-    @* <ul class="pagination">
-        <li class="paginate_button page-item previous disabled" id="productorder_previous">
-        <a href="#" aria-controls="productorder" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="productorder" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="productorder" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item next" id="productorder_next"><a href="#" aria-controls="productorder" data-dt-idx="3" tabindex="0" class="page-link">Next</a></li></ul>*@
+@* <ul class="pagination">
+    <li class="paginate_button page-item previous disabled" id="productorder_previous">
+    <a href="#" aria-controls="productorder" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="productorder" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="productorder" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item next" id="productorder_next"><a href="#" aria-controls="productorder" data-dt-idx="3" tabindex="0" class="page-link">Next</a></li></ul>*@
 </div>
+
 
