--- a/ShopOrderApp/Views/Home/_UnLoadTruck.cshtml
+++ b/ShopOrderApp/Views/Home/_UnLoadTruck.cshtml
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="modal-footer modal-footer-uniform">
-                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" onclick="Cancel()">Cancel</button>
                 <button type="submit" class="btn btn-success pull-right" onclick="SubmitLoading();">Submit</button>
             </div>
         </div>
@@ -144,5 +144,8 @@
 
         }
 
+    }
+    function Cancel() {
+        $('#modal-center').modal("hide");
     }
 </script>
