--- a/WMS/Views/StockTakes/Create.cshtml
+++ b/WMS/Views/StockTakes/Create.cshtml
@@ -103,7 +103,7 @@
                                 <td>
                                     @if (WMS.Helpers.LayoutHelpers.ActivityValidator("StockTakes", "Stop"))
                                     {
-                                        <a class="btn btn-success" href="javascript:void(0)" id="btnStopStockImport">Import Stocktake Data</a>
+                                        @*<a class="btn btn-success" href="javascript:void(0)" id="btnStopStockImport">Import Stocktake Data</a>*@
                                         <a class="btn btn-danger" href="javascript:void(0)" id="btnStopStockTakeConfirm">Stop StockTake</a>
                                     }
                                 </td>
