--- a/WMS/Views/StockTakes/_StocktakeCurrentProductSession.cshtml
+++ b/WMS/Views/StockTakes/_StocktakeCurrentProductSession.cshtml
@@ -187,7 +187,7 @@
                 <th>Product Name</th>
                 <th>Serial</th>
                 <th>Qty</th>
-                <th>Batch Number</th>
+                @*<th>Batch Number</th>*@
                 <th>Expiry Date</th>
                 <th>Edit</th>
             </tr>
